--- a/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
+++ b/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
@@ -5,9 +5,12 @@ date: 2019-01-22 18:31:21
 tags: 
 categories: 
 ---
-光迅科技公告，公司收到证监会《关于核准武汉光迅科技股份有限公司非公开发行股票的批复》，核准公司非公开发行不超过1.29亿股新股。
+*ST东凌公告，拟以自有资金2亿元投资老挝钾盐项目。重组报告预计，老挝甘蒙省东泰矿区100万吨/年钾盐开采加工项目总投资约为6.87亿美元，因建设资金未能到位等原因无法顺利建设投产。截至2018年末,项目实际已投资约6亿元。公司目前拟投资的2亿仅能满足对现有装置采取技改等措施,不能满足整体需求。关于剩余的资金问题,公司仍在协商解决中，资金尚未落实。
 <!-- more -->
 1月22日晚间，沪深两市多家上市公司发布公告，以下是重要公告摘要，供投资者参考：
+*ST东凌公告，拟以自有资金2亿元投资老挝钾盐项目。重组报告预计，老挝甘蒙省东泰矿区100万吨/年钾盐开采加工项目总投资约为6.87亿美元，因建设资金未能到位等原因无法顺利建设投产。截至2018年末,项目实际已投资约6亿元。公司目前拟投资的2亿仅能满足对现有装置采取技改等措施,不能满足整体需求。关于剩余的资金问题,公司仍在协商解决中，资金尚未落实。
+*ST富控公告，目前公司正在筹划重大资产出售事项，公司拟向不特定第三方出售全资孙公司英国Jagex Limited公司的股权。目前公司尚未和相关第三方进行洽谈。预计本次交易将构成重大资产重组。
+新劲刚公告，公司拟通过发行股份及支付现金的方式购买广东宽普科技股份有限公司100%股权并募集配套资金。本次重组构成重大资产重组。广东宽普科技股份有限公司主营业务为射频微波功率放大及滤波、接收、变频等相关电路模块、组件、系统及对抗装备的研发、生产和服务。公司股票自2019年1月23日开市起停牌。
 光迅科技公告，公司收到证监会《关于核准武汉光迅科技股份有限公司非公开发行股票的批复》，核准公司非公开发行不超过1.29亿股新股。
 朗新科技公告，公司于2019年1月22日收到中国证监会出具的《中国证监会行政许可申请受理单》。中国证监会对公司提交的《上市公司发行股份购买资产核准》行政许可申请材料进行了审查，认为该申请材料齐全，符合法定形式，决定对该行政许可申请予以受理。
 科力远公告，证监会并购重组委将于1月23日召开工作会议，审核公司发行股份购买资产暨关联交易事项。公司股票将自1月23日起停牌。
@@ -15,6 +18,8 @@ categories:
 成都银行披露业绩快报，公司2018年实现营业收入115.18亿元，同比增长19.31%；净利润46.49亿元，同比增长18.93%。基本每股收益1.30元。截至 2018年末，不良贷款率1.54%，较年初下降0.15个百分点。
 广百股份披露2018年度业绩快报，实现营收76.14亿元，同比增长10.51%；实现净利2.01亿元，同比增长15.62%；基本每股收益0.59元。
 张家港行披露2018年度业绩快报，实现营收29.92亿元，同比增长23.94%；实现净利8.36亿元，同比增长9.57%；基本每股收益0.46元。
+浦发银行披露2018年业绩快报，公司2018年实现营业收入1715.42亿元，同比增长1.73%；净利润559.14亿元，同比增长3.05%。基本每股收益1.85元。截至2018年末，不良贷款率1.92%，较年初下降0.22个百分点。
+长江证券披露业绩快报，公司2018年度实现营收43.51亿元，同比下降23.19%；实现净利润2.59亿元，同比下降83.23%。
 沙河股份披露2018年度业绩预告，预盈1.44亿元至1.46亿元，同比增长1787.29%—1813.5%。公司2018年度确认深圳市南山区鹤塘小区沙河商城城市更新项目中部分回迁物业的货币补偿收入1.86亿元，该收入属于非经常性损益。
 丰乐种业披露2018年度业绩预告，预盈5000万元–6000万元，同比增长328.90%－414.69%。业绩增长主要因公司销售量大于上年同期，销售收入和利润同比增长。
 东方电缆公告，预计2018年的净利润为1.7亿元左右，同比增加约240%。2018年，公司大力开拓海洋新能源等高端产品市场，陆续交付了多个重大海缆订单。预计2018年主营业务收入同比增长约45%，产品结构中毛利率较高的海洋缆产品比重快速提升，约占主营业务收入的35%。公司在海上风电领域的市场份额逐步增加，同时核心技术成果转化所带来的经济效益明显显现。
