--- a/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
+++ b/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
@@ -5,15 +5,17 @@ date: 2019-01-22 18:31:21
 tags: 
 categories: 
 ---
-*ST东凌公告，拟以自有资金2亿元投资老挝钾盐项目。重组报告预计，老挝甘蒙省东泰矿区100万吨/年钾盐开采加工项目总投资约为6.87亿美元，因建设资金未能到位等原因无法顺利建设投产。截至2018年末,项目实际已投资约6亿元。公司目前拟投资的2亿仅能满足对现有装置采取技改等措施,不能满足整体需求。关于剩余的资金问题,公司仍在协商解决中，资金尚未落实。
+东方金钰公告，公司原拟收购瑞丽姐告金龙房地产开发有限公司100%股权、瑞丽金星翡翠珠宝交易市场、云南泰丽宫珠宝交易市场三项资产。因公司近日收到证监会调查通知书、近期面临较大数额债务到期，标的资产处于抵押或冻结状态等原因，决定终止本次重大资产重组事项。公司同时公告，控股股东兴龙实业同意豁免其向公司出借的6.8亿元借款本息的偿还义务。
 <!-- more -->
 1月22日晚间，沪深两市多家上市公司发布公告，以下是重要公告摘要，供投资者参考：
+东方金钰公告，公司原拟收购瑞丽姐告金龙房地产开发有限公司100%股权、瑞丽金星翡翠珠宝交易市场、云南泰丽宫珠宝交易市场三项资产。因公司近日收到证监会调查通知书、近期面临较大数额债务到期，标的资产处于抵押或冻结状态等原因，决定终止本次重大资产重组事项。公司同时公告，控股股东兴龙实业同意豁免其向公司出借的6.8亿元借款本息的偿还义务。
 *ST东凌公告，拟以自有资金2亿元投资老挝钾盐项目。重组报告预计，老挝甘蒙省东泰矿区100万吨/年钾盐开采加工项目总投资约为6.87亿美元，因建设资金未能到位等原因无法顺利建设投产。截至2018年末,项目实际已投资约6亿元。公司目前拟投资的2亿仅能满足对现有装置采取技改等措施,不能满足整体需求。关于剩余的资金问题,公司仍在协商解决中，资金尚未落实。
 *ST富控公告，目前公司正在筹划重大资产出售事项，公司拟向不特定第三方出售全资孙公司英国Jagex Limited公司的股权。目前公司尚未和相关第三方进行洽谈。预计本次交易将构成重大资产重组。
 新劲刚公告，公司拟通过发行股份及支付现金的方式购买广东宽普科技股份有限公司100%股权并募集配套资金。本次重组构成重大资产重组。广东宽普科技股份有限公司主营业务为射频微波功率放大及滤波、接收、变频等相关电路模块、组件、系统及对抗装备的研发、生产和服务。公司股票自2019年1月23日开市起停牌。
 光迅科技公告，公司收到证监会《关于核准武汉光迅科技股份有限公司非公开发行股票的批复》，核准公司非公开发行不超过1.29亿股新股。
 朗新科技公告，公司于2019年1月22日收到中国证监会出具的《中国证监会行政许可申请受理单》。中国证监会对公司提交的《上市公司发行股份购买资产核准》行政许可申请材料进行了审查，认为该申请材料齐全，符合法定形式，决定对该行政许可申请予以受理。
 科力远公告，证监会并购重组委将于1月23日召开工作会议，审核公司发行股份购买资产暨关联交易事项。公司股票将自1月23日起停牌。
+新凤鸣发布业绩快报称，2018年度公司预计实现营业总收入326.59亿元,同比增长42.22%，主要系首发募投项目中石科技二期于本年3月、5月陆续投产及中欣化纤二期于11月投产，产品产销量较去年同期增加所致。
 千金药业披露业绩快报，公司2018年实现营业总收入33.33亿元，同比增长4.72%；净利润2.55亿元，同比增长22.56%。基本每股收益0.61元。
 成都银行披露业绩快报，公司2018年实现营业收入115.18亿元，同比增长19.31%；净利润46.49亿元，同比增长18.93%。基本每股收益1.30元。截至 2018年末，不良贷款率1.54%，较年初下降0.15个百分点。
 广百股份披露2018年度业绩快报，实现营收76.14亿元，同比增长10.51%；实现净利2.01亿元，同比增长15.62%；基本每股收益0.59元。
@@ -41,9 +43,11 @@ categories:
 哈森股份晚间公告，预计2018年的净利润亏损7000万元。公司上年同期盈利1817万元。公司内销门店数量减少、内销业绩减少；外销业务订单持续减少、外销部门发生大额辞退福利，致使外销亏损。
 润欣科技公告，控股股东提议：以资本公积向全体股东每10股转增5股。另外，公司预计2018年盈利1904.52万元-3535.96万元，同比下降35%-65%。
 新凤鸣公告，公司控股股东庄奎龙提议2018年度利润分配预案为每10股转增4股并派现1.8元。
+TCL集团公告，基于对公司核心主业发展的信心以及对公司长期投资价值的认可，董事长李东生拟十个交易日内，通过集中竞价方式增持公司股份，目标增持金额为3000万元。
 上海电力公告，公司控股股东国家电投集团的一致行动人国家电投集团财务公司计划未来6个月内增持公司股份，增持金额不少于3000万元，不超过1亿元。
 天鹅股份公告，持股9.10%的股东新疆古月杨计划减持不超过540万股，占公司总股本的5.79%。其中通过集中竞价方式减持不超过180万股，于公告日起15个交易日后的6个月内进行。
 双林股份公告，持公司5.64%股权的股东龚雨飞，计划15个交易日后的6个月内减持不超过公司总股本2%的股权。
+东方海洋在回复交易所问询时表示，截至2019年1月21日，公司控股股东东方海洋集团非经营性占用上市公司资金，余额为8.19亿元，东方海洋集团已承诺，将尽快无条件全额偿还占用的资金，并按同期银行借款利率支付相应占用费。目前，东方海洋集团正在处置相关资产、筹集资金以归还占用上市公司的资金。
 绿色动力公告，公司拟通过支付现金的方式收购贵州金沙绿色能源有限公司100%股权，收购价格为6811.54万元。本次收购将提升公司生活垃圾焚烧发电业务规模，扩大市场占有率。
 中央商场公告，1月22日接到祝义财家属通知，公司实控人祝义财已回到家中。祝义财为公司实控人，目前未在公司担任职务，公司经营情况一切正常。
 万达信息公告，公司于2019年1月22日收到中国证监会批复，核准公司向社会公开发行面值总额12亿元可转换公司债券，期限6年。
