--- a/source/_posts/盘前必读｜欧美市场全线下跌，养老金入市进程加快.md
+++ b/source/_posts/盘前必读｜欧美市场全线下跌，养老金入市进程加快.md
@@ -5,30 +5,31 @@ date: 2019-01-23 07:42:29
 tags: 
 categories: 
 ---
-11:00 日本1月央行政策利率
+周三亚洲股市开市，日经225指数开盘下跌161.91点，跌幅0.79%，报20622.91点。
 <!-- more -->
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/5795dce2c13c12cd19ef68151420a6d2.jpg" />
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/eb4ce271a30e5381fe24a664769b6ff4.jpg" />
 周二美股尾盘跌幅收窄，道指收跌约300点，终结四连涨。截至收盘，道指跌1.22%报24404.48点，标普500跌1.42%报2632.9点，纳指跌1.91%报7020.36点。美国大型科技股全线收低，中概股亦遭重挫。苹果收跌2.24%，微博收跌13.63%。欧洲市场方面，德国DAX指数收盘下跌0.39%，报11092.44点；英国富时100指数收盘下跌1.02%，报6899.25点；法国CAC40指数收盘下跌0.42%，报4847.53点。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/1115fd943822077aad8679290e0a4854.jpg" />
-11:00 日本1月央行政策利率
+周三亚洲股市开市，日经225指数开盘下跌161.91点，跌幅0.79%，报20622.91点。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/556a97aaa5c4f3aaf33c3b23792d852e.jpg" />
-21:30 美国12月核心零售销售环比
+11:00 日本1月央行政策利率
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/8188a571f2973af64475eeb06ac3c6b5.jpg" />
-21:30 美国11月贸易账
+21:30 美国12月核心零售销售环比
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/efe915771b4f65f580ae857c85897508.jpg" />
-无
+21:30 美国11月贸易账
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/d81f39cc89a6aaff8d64e728f13d02c2.jpg" />
-近期，经国务院同意，人民银行等八部门联合印发《上海国际金融中心建设行动计划（2018-2020年）》。1月22日，在上海市政府新闻发布会上，人民银行研究局局长徐忠表示，在推进国际金融中心建设过程当中，上海要注意以下五个方面。一是寻找差距，推进相关改革。二是要注重借鉴新兴国家建设国际金融中心好的做法，取长补短。三是要重点推动发展资本市场，核心是强化融资功能，按照国际金融中心的标准进行改革发展。四是放宽市场准入，加快国际性金融中心的集聚，进一步扩大对外开放。五是深入与上海金融中心建设相关的税收问题，重点围绕金融服务领域，探索建立税制简化功能性税收体系。
+无
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/9d8e2d90a2b37391ca779f15a10018b0.jpg" />
-1月22日，达沃斯论坛上，证监会副主席方星海表示，中国在过去四十年间未发生大的金融危机，这源于中国有从上至下的金融风险管理方式。中央政府经常与金融部门保持联系，从金融部门获得信息，如果金融系统存在风险累积，政府部门将会介入，命令解除金融风险。金融系统能够以非常迅速的方式对风险预警做出反应，会迅速控制住风险, 所以危机不会向全系统扩散，并且不会产生恐慌。随着经济增长，风险是逐渐被稀释的。
+近期，经国务院同意，人民银行等八部门联合印发《上海国际金融中心建设行动计划（2018-2020年）》。1月22日，在上海市政府新闻发布会上，人民银行研究局局长徐忠表示，在推进国际金融中心建设过程当中，上海要注意以下五个方面。一是寻找差距，推进相关改革。二是要注重借鉴新兴国家建设国际金融中心好的做法，取长补短。三是要重点推动发展资本市场，核心是强化融资功能，按照国际金融中心的标准进行改革发展。四是放宽市场准入，加快国际性金融中心的集聚，进一步扩大对外开放。五是深入与上海金融中心建设相关的税收问题，重点围绕金融服务领域，探索建立税制简化功能性税收体系。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/3fe87f78bb215979ccf7a8b1a382813c.jpg" />
-银保监会发布《关于加强中资商业银行境外机构合规管理长效机制建设的指导意见》。《指导意见》要求，中资商业银行境外机构合规管理应当坚持制度约束与文化培育相结合，适当性与实操性相结合，内生驱动与外部监督相统一，总部引领和境外机构践行相统一的基本原则。
+1月22日，达沃斯论坛上，证监会副主席方星海表示，中国在过去四十年间未发生大的金融危机，这源于中国有从上至下的金融风险管理方式。中央政府经常与金融部门保持联系，从金融部门获得信息，如果金融系统存在风险累积，政府部门将会介入，命令解除金融风险。金融系统能够以非常迅速的方式对风险预警做出反应，会迅速控制住风险, 所以危机不会向全系统扩散，并且不会产生恐慌。随着经济增长，风险是逐渐被稀释的。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/10271f820278a7057d79730f65d39711.jpg" />
-1月22日，最高人民检察院召开新闻通气会通报，日前，最高检与生态环境部等九部委联合印发《关于在检察公益诉讼中加强协作配合依法打好污染防治攻坚战的意见》，就在检察公益诉讼中加强协作配合，合力打好污染防治攻坚战，共同推进生态文明建设形成协作意见。
+银保监会发布《关于加强中资商业银行境外机构合规管理长效机制建设的指导意见》。《指导意见》要求，中资商业银行境外机构合规管理应当坚持制度约束与文化培育相结合，适当性与实操性相结合，内生驱动与外部监督相统一，总部引领和境外机构践行相统一的基本原则。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/5b74b539a88a0dcdfc3710b856670e24.jpg" />
-1月22日，中国基金业协会党委副书记、副会长胡家夫在第七届国际创新与资本论坛上表示，基金业协会正积极推动养老金等长期资金入市。积极推动有税收递延支持的、以个人账户为基础的第三支柱养老体系建设，鼓励大众积累个人养老金，并通过专业化投资管理制度安排，将个人养老账户资金合理配置到长期权益类产品中，推动形成长期资本金，让养老金持有人更好地分享创新发展的长期回报。积极推动、支持基金行业参与基本养老金、企业年金、职业年金、个人养老金以及慈善基金、捐赠基金等长期资金的资产配置和投资管理。
+1月22日，最高人民检察院召开新闻通气会通报，日前，最高检与生态环境部等九部委联合印发《关于在检察公益诉讼中加强协作配合依法打好污染防治攻坚战的意见》，就在检察公益诉讼中加强协作配合，合力打好污染防治攻坚战，共同推进生态文明建设形成协作意见。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/781b132626e7c57022d1491e8f3a175c.jpg" />
+1月22日，中国基金业协会党委副书记、副会长胡家夫在第七届国际创新与资本论坛上表示，基金业协会正积极推动养老金等长期资金入市。积极推动有税收递延支持的、以个人账户为基础的第三支柱养老体系建设，鼓励大众积累个人养老金，并通过专业化投资管理制度安排，将个人养老账户资金合理配置到长期权益类产品中，推动形成长期资本金，让养老金持有人更好地分享创新发展的长期回报。积极推动、支持基金行业参与基本养老金、企业年金、职业年金、个人养老金以及慈善基金、捐赠基金等长期资金的资产配置和投资管理。
 1月22日举行的“上海国际金融中心建设行动计划（2018-2020）”新闻吹风会上，上海证监局局长严伯进说，科创板相关建设，已成为证监会全系统头号工程。上海证监局目前已安排部门与上海市积极接洽配合，排查新经济企业情况，指导企业做好科创板相关推进工作。鼓励金融中介机构做好科创板起步工作。
 2019年全国地质调查工作会议透露，自然资源部中国地质调查局组织实施页岩气调查科技攻坚战并在鄂西取得战略性突破。鄂西地区在震旦系、寒武系、志留系三个地质层系均获高产页岩气流。据评估，鄂西页岩气地质资源量达11.68万亿立方米，具有建成年产能100亿立方米的基础，与重庆涪陵、长宁-威远“三足鼎立”，有望成为我国页岩气勘查开发和天然气增储上产新的基地。
 相关公司：山东墨龙（002490.SZ）、胜利股份（000407.SZ）
