--- a/source/_posts/盘前必读｜欧美市场全线下跌，养老金入市进程加快.md
+++ b/source/_posts/盘前必读｜欧美市场全线下跌，养老金入市进程加快.md
@@ -9,7 +9,7 @@ categories:
 <!-- more -->
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/5795dce2c13c12cd19ef68151420a6d2.jpg" />
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/eb4ce271a30e5381fe24a664769b6ff4.jpg" />
-周二美股尾盘跌幅收窄，道指收跌约300点，终结四连涨。截至收盘，道指跌1.22%报24404.48点，标普500跌1.42%报2632.9点，纳指跌1.91%报7020.36点。美国大型科技股全线收低，中概股亦遭重挫。苹果收跌2.24%，微博收跌13.63%。欧洲市场方面，德国DAX指数收盘下跌0.39%，报11092.44点；英国富时100指数收盘下跌1.02%，报6899.25点；法国CAC40指数收盘下跌0.42%，报4847.53点。
+当地时间周二，美股尾盘跌幅收窄，道指收跌约300点，终结四连涨。截至收盘，道指跌1.22%报24404.48点，标普500跌1.42%报2632.9点，纳指跌1.91%报7020.36点。美国大型科技股全线收低，中概股亦遭重挫。苹果收跌2.24%，微博收跌13.63%。欧洲市场方面，德国DAX指数收盘下跌0.39%，报11092.44点；英国富时100指数收盘下跌1.02%，报6899.25点；法国CAC40指数收盘下跌0.42%，报4847.53点。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/1115fd943822077aad8679290e0a4854.jpg" />
 周三亚洲股市开市，日经225指数开盘下跌161.91点，跌幅0.79%，报20622.91点。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/556a97aaa5c4f3aaf33c3b23792d852e.jpg" />
