--- a/source/_posts/“头腾大战”续集？抖音新用户无法以微信授权登录.md
+++ b/source/_posts/“头腾大战”续集？抖音新用户无法以微信授权登录.md
@@ -7,6 +7,7 @@ categories:
 ---
 1月22日晚，大量抖音用户表示，无法正常以微信授权的方式登录并使用抖音APP。
 <!-- more -->
+<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/e5f04f8220c299e7408f79e398045168.jpg" />
 一财资讯
 1月22日晚，大量抖音用户表示，无法正常以微信授权的方式登录并使用抖音APP。
 1月23日凌晨，抖音短视频官方发布公告称，紧急排查后确认，抖音自身并没有遇到技术故障，应是由于微信开放平台提供的登录服务出现问题导致的结果。由于事先没有接到任何来自微信方面的通知，目前，尚不清楚这是微信登录服务的技术故障，还是其他人为因素造成的结果。
