--- a/source/_posts/统计局：老龄化程度加深，劳动年龄人口数量和比重连续7年双降.md
+++ b/source/_posts/统计局：老龄化程度加深，劳动年龄人口数量和比重连续7年双降.md
@@ -1,5 +1,5 @@
 ---
-title: 统计局：2018年“全面两孩”政策效果继续显现
+title: 统计局：老龄化程度加深，劳动年龄人口数量和比重连续7年双降
 author: wetech
 date: 2019-01-23 12:33:41
 tags: 
@@ -18,8 +18,7 @@ categories:
 （作者为国家统计局人口和就业统计司司长）
  
  
+我国劳动参与率在世界上不算低，我们劳动年龄人口9亿人当中有7亿多在就业，劳动力数量本身就有很大潜力。
 中国2018年出生人口1523万，自然增长率3.81‰。
 国家统计局局长宁吉喆称，2018年中国人口保持正增长，劳动年龄人口仍有约9亿人，中国的人口红利仍然存在。
-2018年全年，规模以上工业增加值同比增长6.2%，增速较1-11月份回落0.1个百分点。
-2018年1-12月，社会消费品零售总额380987亿元，比上年增长9.0%（扣除价格因素实际增长6.9%，以下除特殊说明外均为名义增长），增速比1-11月略低0.1个百分点。
-2018年1-12月，全国固定资产投资（不含农户）635636亿元，比上年增长5.9%，增速与1-11月份持平，比上年同期回落1.3个百分点。
+央视网消息：国家卫健委1月10日举行例行发布会，针对近日媒体热议的我国出生人口大幅下降问题，国家卫健委表示，全面放开二孩政策实行后，近两年我国二孩占新出生人口比始终保持在50%左右，二孩政策所产生的积极意义正在持续释放出来。2018年全年人口数据近期将由相关部门正式发布。
