--- a/source/_posts/特朗普“经济期中考”：关税政策“得不偿失”、税改短期效应积极.md
+++ b/source/_posts/特朗普“经济期中考”：关税政策“得不偿失”、税改短期效应积极.md
@@ -21,7 +21,7 @@ categories:
 美国商务部去年12月发布的数据显示，去年10月美国商品和服务贸易逆差创十年来最高水平，达555亿美元。同时，这也是美国贸易逆差连续第五个月扩大。美国商务部认为，特朗普由此面临一个尴尬的现实，即如果这种势头延续，那么去年全年美国的贸易逆差将首次达到6000亿美元。
 牛津经济研究所认为，特朗普的关税政策“得不偿失”，将使得2018年美国经济增速放缓0.1~0.2个百分点。税收基金会（the Tax Foundation）也认为，从长远来看，关税之争将使美国损失9.4万个就业岗位。
 2017年底，特朗普政府推出大规模税改，将企业最高税率从35%降至21%，这些减税措施将于2025年到期。同时，有消息称，特朗普还希望进行2.0版税改，进一步降低企业税，释放企业的经济活力。
-这场税改确实为美国经济带来了短期刺激效应。数据显示，美国去年第三季度GDP增速为3.4%，虽然低于预期的4.3%，但依旧是2014年来的最高值。美国税收政策中心（the Tax Policy Center）预计，税改将会使美国2018年全年GDP增加0.8个百分点。
+这场税改确实为美国经济带来了短期刺激效应。数据显示，美国去年第二季度GDP增速为4.1%，创下2014年来的最高值。美国税收政策中心（the Tax Policy Center）预计，税改将会使美国2018年全年GDP增加0.8个百分点。
 刺激政策的积极效应也体现在了就业市场。美国劳工部的数据显示，2018年10月美国失业率为3.7%，创50年新低。不过，特朗普总统任期前两年创造就业岗位的速度仍赶不上其前任奥巴马。
 然而，美国税收政策中心认为，刺激政策的效应会逐步减弱。到2020年，税改刺激对GDP的贡献可能仅为0.5%，到2027年可忽略不计。
 伴随特朗普这两年总统任期的还有不断高企的联邦政府债务问题。美国国会预算办公室的数据显示，截至去年12月中旬，美国共同债务已达到创纪录的21.9万亿美元。美国去年三季度GDP总量达20.66亿美元，而债务占GDP比重已达106%。
