--- a/source/_posts/独家|一点资讯筹备新一轮融资，部分原股东与管理层将被清退.md
+++ b/source/_posts/独家|一点资讯筹备新一轮融资，部分原股东与管理层将被清退.md
@@ -10,7 +10,7 @@ categories:
 吕倩
 一点资讯正在筹备新一轮融资事宜，而在此过程中，一家政府背景的基金正主导着对一点资讯原股东架构与管理层的“清理”，两个独立信源分别向第一财经记者指向北京市文化投资发展集团有限责任公司，后者在2017年11月、一点资讯E轮融资时，进入一点资讯股东体系之中、并作为“特股”存在。
 所谓“特股”，即特别股，是普通股的对称，指公司发行的、享有特别权利的股份，具体包括优先股、混合股、后配股、可转换股、可赎回股等类型。当公司出现普通股发行困难、经济困难、需要引进先进技术但缺乏资金等情况时，可发行特别股。
-第一财经记者据此向一点资讯方面求证，对方称所谓“特股”一事不存在；致电北京市文化投资发展集团总经理戴自更，戴建议具体事宜询问当时的项目负责投资人。
+第一财经记者致电北京市文化投资发展集团总经理戴自更，戴建议具体事宜询问当时的项目负责投资人。
 官网信息显示，北京市文化投资发展集团有限责任公司——简称北京文投集团——成立于2012年12月11日,是由北京市政府授权北京市国有文化资产监督管理办公室成立的国有独资公司，注册资本60亿元，为市属一级企业。
 天眼查数据显示，北京文投集团由北京市国有文化资产监督管理办公室百分之百控股，党委书记、董事长为周茂非，党委副书记、副董事长、总经理为戴自更，党委副书记、董事为闫晓东。
 公开资料显示，2017年10月，一点资讯完成 1.12亿美元规模新轮融资，估值10亿美元，并在股权架构中新增北京市文化投资发展集团有限公司，宣告了国资背景基金的正式加入。
