--- a/source/_posts/A股复盘10张图|两市股指窄幅震荡，燃料电池强势领涨.md
+++ b/source/_posts/A股复盘10张图|两市股指窄幅震荡，燃料电池强势领涨.md
@@ -19,16 +19,20 @@ categories:
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/e64279f467a9519e9fa7b222a0028b5d.jpg" />
 方正证券指出，随着新能源汽车持续上量，动力电池需求持续提升，头部动力电企业扩产需求仍然旺盛。行业前10家动力电池企业2018年扩产规模合计超过40GWh，2019年扩产规模将超过80GWh，增幅巨大。预计锂电设备行业2019年订单量将会增长，整体市场需求将大幅好于2018年。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/cceb2329c8a13c21b96bede18665af37.jpg" />
-1.2018年，全国发行地方政府债券41652亿元。其中，发行一般债券22192亿元，发行专项债券19460亿元；按用途划分，发行新增债券21705亿元，占当年新增债务限额的99.6%，发行置换债券和再融资债券19947亿元。截至2018年末，全国地方政府债务余额183862亿元，控制在全国人大批准的限额之内。
+盘后数据显示，1月23日龙虎榜中，共5只个股出现了机构的身影，5只个股均呈现机构净卖出，没有股票呈现机构净买入。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/53cacd5f36a1f9646046201f8e0d6439.jpg" />
-2.1月23日，财政部召开2018年财政收支发布会，财政部国库司副巡视员李大伟在会上介绍，2018年全国一般公共预算收入中，印花税收入2199亿元，同比下降0.3%；其中，证券交易印花税977亿元，同比下降8.6%。
+当天机构净卖出前三的股票分别是瑞康医药、通鼎互联、洪达兴业，净流出金额分别是5844万元、640万元、565万元。
+<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/054d8c673f38a2036b30c05cc214d83c.jpg" />
+详见下表：
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/0a8c90ff3adf324e206ae74e4c40e641.jpg" />
-3.1月23日，北京市统计局、国家统计局北京调查总队发布2018年北京市经济数据。经初步核算，全市实现地区生产总值30320亿元，按可比价格计算，比上年增长6.6%。统计部门表示，2018年北京经济总体平稳，稳中提质。分产业看，第一产业实现增加值118.7亿元，下降2.3%；第二产业实现增加值5647.7亿元，增长4.2%；第三产业实现增加值24553.6亿元，增长7.3%。
+1.2018年，全国发行地方政府债券41652亿元。其中，发行一般债券22192亿元，发行专项债券19460亿元；按用途划分，发行新增债券21705亿元，占当年新增债务限额的99.6%，发行置换债券和再融资债券19947亿元。截至2018年末，全国地方政府债务余额183862亿元，控制在全国人大批准的限额之内。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/f4d476b9a01310a2a2204af41e069bb4.jpg" />
-4.1月22日，数字中国产业发展联盟成立大会暨高峰论坛在北京召开。工信部副部长陈肇雄对联盟工作提出建议：要发挥好融合引领作用，促进信息基础设施加快演进升级和传统基础设施智能化水平提升，推动新一代信息通信技术与实体经济深度融合，培育新应用新模式新业态，繁荣发展数字经济。支持龙头企业联合高校和科研院所组建产学研用联合体，开展核心技术研发攻关，发展壮大基于5G、工业互联网、大数据、人工智能的新兴产业。
+2.1月23日，财政部召开2018年财政收支发布会，财政部国库司副巡视员李大伟在会上介绍，2018年全国一般公共预算收入中，印花税收入2199亿元，同比下降0.3%；其中，证券交易印花税977亿元，同比下降8.6%。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/a8de3ef26cc4e734c231dbe4ade1eab4.jpg" />
+3.1月23日，北京市统计局、国家统计局北京调查总队发布2018年北京市经济数据。经初步核算，全市实现地区生产总值30320亿元，按可比价格计算，比上年增长6.6%。统计部门表示，2018年北京经济总体平稳，稳中提质。分产业看，第一产业实现增加值118.7亿元，下降2.3%；第二产业实现增加值5647.7亿元，增长4.2%；第三产业实现增加值24553.6亿元，增长7.3%。
+<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/33d22d7d0ba71456c6f4ea9631fab86f.jpg" />
+4.1月22日，数字中国产业发展联盟成立大会暨高峰论坛在北京召开。工信部副部长陈肇雄对联盟工作提出建议：要发挥好融合引领作用，促进信息基础设施加快演进升级和传统基础设施智能化水平提升，推动新一代信息通信技术与实体经济深度融合，培育新应用新模式新业态，繁荣发展数字经济。支持龙头企业联合高校和科研院所组建产学研用联合体，开展核心技术研发攻关，发展壮大基于5G、工业互联网、大数据、人工智能的新兴产业。
 虽然近期市场有所回暖，但是板块轮动较快，量能、换手率等短期指标并未得到明显改善，市场难有持续性行情出现，反复震荡盘整或仍为主基调。建议把握三条主线：一、近期北上资金流入速度加快，对市场中长期投资具有一定的参考价值，以食品饮料、家用电器等部分必选消费板块或将获得资金关注；二、持续推荐以5G通信、新能源汽车和云计算为主的科学创新板块；三、政策效应进一步释放，前期超跌的券商板块有望得到估值修复。
-<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/b2dc5f5c9f2c898d67638919a7ed0120.jpg" />
 在当前的经济周期中，政策主题性预期及市场流动性将是影响市场的两大重要因素，受益于政策逆周期调节的板块以及交易阻力较小的成长板块的配置优势阶段性显现，建议在春季躁动期间按照“政策托底对冲+创新科技战略”两大主线进行配置券商、建筑、计算机、通信、国防军工等行业，同时注意回避并购业绩承诺期满、存在较大商誉减值风险的个股。而在创业板业绩预告披露期、市场预热阶段。
  
  
