--- a/source/_posts/中信证券2018年净利93.94亿元，同比降17.83.md
+++ b/source/_posts/中信证券2018年净利93.94亿元，同比降17.83.md
@@ -14,3 +14,8 @@ categories:
 中信证券今日涨0.29%，报17.52元，最新市值2122.88亿元。
  
  
+本次交易完成后，中信证券在广东省（不含深圳）营业网点总数将由18家增至50家，可明显提升中信证券在广东省及华南地区竞争力。
+业绩不好，小型期货公司遭嫌弃，新晟期货51%股权挂牌出让。
+上交所要求公司结合标的资产的亏损情况，说明此次收购广州证券的必要性、合理性；是否会对公司的评级产生负面影响等。
+1月15日晚间，沪深两市多家上市公司发布公告，本文是重要公告摘要，供投资者参考。
+停牌期间，券商板块涨幅领先，龙头方正证券涨幅甚至超过40%，整个券商板块涨幅也超过10%。
