--- a/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
+++ b/source/_posts/晚间公告｜干货！今日晚间重要公告速读（更新中）.md
@@ -5,15 +5,23 @@ date: 2019-01-23 18:27:10
 tags: 
 categories: 
 ---
-*ST东南公告，由于本次交易推进期间二级市场大幅波动、资本市场环境发生较大变化，重组进展无法达到双方预期，公司拟终止筹划本次重大资产重组事项。公司将尽快召开董事会审议终止本次重组的相关议案并及时披露。
+科力远公告，公司拟购买吉利集团、华普汽车合计持有的CHS公司36.97%的股权的并购重组事项获证监会有条件通过。这意味吉利集团将大概率成为科力远持股5%以上股东。科力远曾于2018年12月14日公告，公司拟通过发行股份的方式，购买吉利集团、华普汽车合计持有的CHS公司36.97%的股权，交易作价为8.21亿元，每股价格为4.47元。
 <!-- more -->
 1月23日晚间，沪深两市多家上市公司发布公告，以下是重要公告摘要，供投资者参考：
+科力远公告，公司拟购买吉利集团、华普汽车合计持有的CHS公司36.97%的股权的并购重组事项获证监会有条件通过。这意味吉利集团将大概率成为科力远持股5%以上股东。科力远曾于2018年12月14日公告，公司拟通过发行股份的方式，购买吉利集团、华普汽车合计持有的CHS公司36.97%的股权，交易作价为8.21亿元，每股价格为4.47元。
 *ST东南公告，由于本次交易推进期间二级市场大幅波动、资本市场环境发生较大变化，重组进展无法达到双方预期，公司拟终止筹划本次重大资产重组事项。公司将尽快召开董事会审议终止本次重组的相关议案并及时披露。
+新集能源披露业绩快报，公司2018年实现营业总收入87.49亿元，同比增长17.16%；净利润2.52亿元，同比增长1037.67%。基本每股收益0.1元。
 中国国旅披露业绩快报，公司2018年实现营业总收入470.12亿元，同比增长66.23%；净利润31.48亿元，同比增长24.39%。基本每股收益1.61元。报告期内公司通过收购日上免税行（上海）有限公司、巩固优化现有离岛免税业务以及开展首都机场和香港机场免税业务，带来营业收入增量173.49亿元、营业利润13.87亿元。
 保利地产发布业绩快报。预计2018年全年实现营业总收入19,362,731.9万元，同比增长32.31%；归属于上市公司股东的净利润1,880,234.96万元，同比增长20.33%。基本每股收益1.58元。
 招商银行披露业绩快报，公司2018年实现净利润805.60亿元，同比增长14.84%。
 天威视讯发布业绩快报，2018年度实现营收15.68亿元，同比下降1.46%；实现净利润1.96亿元，同比下降16.67%。
 中信证券公告，2018年，受市场环境影响，集团实现营业收入372.23亿元，同比下降14.02%，实现净利润93.94亿元，同比下降17.83%。
+西水股份公告，预计2018年净利润，与上年同期相比将减少20.11亿元，同比下降 83.97%左右；预计2018年扣除非经常性损益的净利润，与上年同期相比将增加4.66亿元，同比增长400.56%左右。净利润下降主要原因系2017年公司将所持兴业银行股权转换为权益法核算时一次性将转换时点的其他综合收益转入投资收益所致；扣除非经常性损益的净利润上升的主要原因系子公司天安财险随着投资型保险业务满期给付。
+方正证券披露2018年度业绩预告，预盈6亿元至7.2亿元，同比减少50%到60%。另外，公司2018年计提各项资产减值准备共计4.7亿元。而2018年计提融出资金减值准备3.37亿元，主要为公司（含子公司）对部分融出资金进行单项计提减值准备，涉及单项计提减值的融资股票为南京新百、上海莱士和乐视网等。
+ST长油公告，预计2018年实现的净利润为3.3亿元到3.7亿元，同比将减少9.87%-19.61%。公司重新上市申请书预测2018年年度业绩为2.90亿元，同比减少29.29%。业绩变动原因在于：因燃油价格同比上涨，导致燃油成本同比有较大幅度增长；因 2018 年度母公司开始缴纳企业所得税，导致所得税费用同比大幅增加。
+东华测试披露2018年度业绩预告,预盈1713.11万元1804.48万元,同比增长275%-295%。报告期内,公司销售收入有所增加,股权激励计划股份支付费用转回。
+平治信息披露2018年度业绩预告。公司预计2018年盈利20,600万元-23,500万元，比上年同期增长112.31%-142.20%。
+农发种业公告，预计2018年的净利润为2700万元到3300万元。公司上年同期亏损2.85亿元。
 高新发展披露2018年度业绩预告，预盈5000万元—6000万元，同比增长104.94%-145.93%。2018年，公司建筑施工业务订单大幅增加，相应的，建筑施工业务利润较上年大幅增加。
 长青集团披露2018年度业绩预告修正公告。公司在三季报中预计2018年度归属于上市公司股东的净利润与上年同期相比变动幅度在50%至80%。修正后的预计业绩为盈利16,202.37万元-17,516.08万元，比上年同期上升85%-100%。业绩修正原因为制造产业盈利回升；第四季度收到政府补贴。
 航天通信公告，预计2018年实现的净利润为1.8亿元至2.1亿元，同比增加80%-110%。本次业绩预增主要是由于资产处置收益和政府补助等非经常性损益事项所致，影响金额为1.6亿元左右。
@@ -28,11 +36,15 @@ categories:
 平安银行公告，董事会审议通过了《关于优先股股息发放方案的议案》。以优先股发行量2亿股（每股面值人民币100元）为基数，按照票面股息率4.37%计算，每股优先股派发股息人民币4.37元（含税）。
 梅花生物公告，董事长王爱军提议公司回购股份，回购资金总额不低于2亿元，不高于4亿元，回购价格不超过5.5元/股。
 金牌厨柜公告，截至1月23日，公司已累计回购67.63万股，占公司总股本的1%，成交的最高价为64.38元/股，最低价为46.55元/股，支付的资金总额为3773.79万元。
+深天马A公告，收到公司实际控制人中航国际之一致行动人中航国际深圳的通知，中航国际深圳于1月23日增持公司30万股，并计划6个月内继续增持，拟增持股份的总金额不低于5000万元，且不超过9800万元（含本次已增持股份）。
+崇达技术公告，实际控制人姜雪飞计划6个月内增持公司股份。拟增持的金额不低于500万元，不超过1000万元。
 楚天科技公告，公司控股股东楚天投资签署《股份转让协议》，拟将其所持有的5000万股公司股份（占公司总股本10.55%）协议转让给湖南资管，转让价格为8元/股。转让完成后，湖南资管成为楚天科技第二大股东。受让股份后，湖南资管不谋求对楚天科技的控制权。
 莎普爱思公告，持股9.06%的股东上海景兴计划15个交易日后的6个月内，以集中竞价交易方式减持不超过645万股，即不超过公司总股本的2%。
 宝胜股份公告，潇湘君佑拟减持不超过2443.44万股公司股份，即不超过宝胜股份总股本的2%，减持价格视市场价格确定。
 利群股份公告，合计持股6.40%的股东宽街博华及其一致行动人GS Shandong，计划15个交易日后的6个月内合计减持不超过3850万股，即不超过公司总股本的4.47%。
 浙江众成公告，持有公司41.04%股权的控股股东、实际控制人陈大魁，计划十九个交易日之后的六个月内，减持不超过公司总股本5%的股权。
+中海油服披露2019年战略指引公告，根据目前公司国内外订单情况，预计2019年四大板块中钻井服务、油田技术服务的工作量同比增速更显著，物探和工程勘察服务工作量稳中有升，船舶服务工作量较上年持平。2019年，公司的现金流整体安全。公司将继续严格遵循审慎的资本投资、关注股东分红回报，预计2019年的资本性开支为30亿元左右。
+老百姓公告，拟参与投资设立规模预计为10.05亿元的健康产业投资基金，其中公司作为有限合伙人投资参股不超过2亿元，投资基金主要投向医药零售连锁企业及高度协同的行业。
 中珠医疗公告，中珠医疗拟以6.3亿元收购前海顺耀祥持有的中珠商业30%的股权。中珠商业目前正在实施的夏湾批发市场城市更新项目，具有良好的市场前景，预期经营效益优良。前海顺耀祥持有的中珠商业30%股权系过去12个月内受让于公司关联法人辽宁中珠。
 招商证券公告，2018年4月康得集团将其持有的康得新股票质押给公司融资1亿元。2018年11月15日，履约保障比例低于平仓线，康得集团后续并未按照公司通知要求补充质押，也未完成提前购回，构成违约。目前，康得集团因涉嫌信披违法违规被证监会立案调查。为维护公司合法权益，公司依法提起诉讼，请求判令康得集团向公司偿还债权本金1亿元，支付利息、违约金并承担诉讼费和实现债权的费用。
 美克家居公告，公司拟与上海娄江、通联金控签署合伙协议，公司作为有限合伙人，将出资3亿元认缴太仓昆池投资中心（有限合伙）份额。太仓昆池作为上海娄江设立的氢能产业基金的投资载体，拟投资于与氢能产业链相关的项目，包括但不限于氢燃料电池整车项目，控制系统/核心组件/辅件研发制造等项目，储氢、加氢、制氢及运氢项目，检测装备项目等。
