--- a/source/_posts/长租公寓之冬：蛋壳收购爱上租后，世联红璞公寓总经理离职.md
+++ b/source/_posts/长租公寓之冬：蛋壳收购爱上租后，世联红璞公寓总经理离职.md
@@ -16,7 +16,7 @@ categories:
 2018年4月，世联行的2017年业绩发布会上，甘伟还表示，2018年公寓的收入增长不会低于17年。可惜甘伟等不及2018年业绩的公布了。
 甘伟走后，世联行的长租公寓业务将往何处去？
 2017年12月，世联行曾宣布，要对子公司世联红璞增资扩股，将其注册资本从300万元增加至10000万元，扩大业务之意甚为明显。
-然而1月22日，世联行发布一份关于子公司增资扩股的进展公告，称虽已完成工商变更登记手续，但并未实缴出资。
+然而2018年12月21日，世联行发布一份关于子公司增资扩股的进展公告，称虽已完成工商变更登记手续，但并未实缴出资。
 世联行称，因基于市场情况的变化及公司对所属资产管理服务业务板块(长租公寓、商业物业管理等) 的战略发展规划，有意推进资产管理服务业务板块的对外合作，探索更适合长租公寓业务发展的股权融资。
 目前，世联行已与世联集房、深圳世联云贷柒号签订《合作谅解备忘录》，暂缓对世联红璞实缴出资事宜。 工商资料显示，世联集房、深圳世联云贷柒号是世联红璞的直接股东，分别持股80%、20%。
 在国家倡导租售并举的大背景下，住房租赁市场潜力以亿元计，但长租公寓资金回收周期长、投入大，成为有志于此者的考验和难关。
@@ -25,6 +25,8 @@ categories:
 而2018年1-9月份，世联行净利润为37541.82万元，同比减少29.47%，原因之一是公寓管理业务亏损增加，新增公寓的装修改造等一次性投入成本分摊增加所致。
 暂缓对世联红璞实缴出资、公寓持续投入导致公司净利润下滑三成，分部出现亏损，对于业务收缩的可能很难让人不与甘伟的离职相联想。
 世联行董事长陈劲松转发1月23日的官方声明予第一财经称，甘伟因个人原因离职，其离开不会对红璞公寓的日常经营活动产生影响。
+世联行董秘袁鸿昌对第一财经表示，甘伟离职，与暂缓对世联红璞实缴出资之间没有关系。“世联红璞走的是轻资产服务路线，之前公司曾设想，为了便于世联红璞与各地签约，决定对世联红璞增资至10000万元，但实际上世联集房的注册资金才5000万元。世联集房本身就是走重资产路线，后来公司还是决定让世联集房进行房源签约，因此暂缓对世联红璞实缴出资，这跟公司资金并无因果联系。”
+袁鸿昌透露，目前接替甘伟的是史剑华，一名世联行的老员工。史剑华曾作为中层管理人员及核心骨干，出现在世联行股票期权激励计划激励对象名单中。
 甘伟于2000年加入世联行，共任职18年。无论如何，世联行已是过去。
 甘伟的下一站是广州建方长租。建方长租即广州建方房屋租赁管理有限公司，成立于2017年底，总部位于广州，由建行旗下的广东建融住房租赁公司与广州方圆合资设立。
 建方长租目前开展存房、租房两块业务。存房目标是盘活社会闲散房源，最终指向出租；
