--- a/source/_posts/“从这里影响世界”，谁与百度“争鸣”.md
+++ b/source/_posts/“从这里影响世界”，谁与百度“争鸣”.md
@@ -27,7 +27,8 @@ categories:
 当记者搜索关键词“春运”时，百度的搜索结果依次为春运最新相关信息、百度百科、三条自媒体账号发布的百度百家相关文章；搜狗搜索结果为春运相关新闻集合、12306网站、搜狗百科和知乎热门回答等内容；360的搜索结果为春运相关新闻集合、列车时刻表查询、最新相关消息、百科等内容。
 值得注意的是，百度并没有透露百家号在百度搜索结果首页显示的占比情况。“全站比例没有太多意义，大家搜索一般只看前两页。如果能给出第一页的结果占比会更有说服力。”方可成这样回应。
 此外，他在文章中提到，一则《美国中情局向本拉登家族道歉，澄清911事件与本拉登无关》的假新闻在百家号获得了40万的点击量。
-究竟什么样的百家号内容会优先显示在搜索结果中？百家号总经理阮瑜告诉第一财经记者，百家号本身核心的设计理念，是作为B端的生产工具，更多把自己定位在平台方，并且会在整个激励和扶持上会有明确引导，尤其是让更多的优质账号浮现在平台中，打击低质的账号。目前百家号合作媒体账号超2600个，头部机构覆盖率95%，百家号在给搜索做相关内容供给时，会择优对优质的权威媒体账号进行推荐。 
+究竟什么样的百家号内容会优先显示在搜索结果中？百家号总经理阮瑜告诉第一财经记者，百家号本身核心的设计理念，是作为B端的生产工具，更多把自己定位在平台方，并且会在整个激励和扶持上会有明确引导，尤其是让更多的优质账号浮现在平台中，打击低质的账号。
+阮瑜表示，百家号向搜索推荐内容的事情上是非常谨慎的，这个事情是百家号跟搜索团队一起，会对现有内容深度做摸底、调研。例如，目前百家号合作媒体账号超2600个，头部机构覆盖率95%，百家号在给搜索做相关内容供给时，会择优对优质的权威媒体账号进行推荐。 
 “尤其我们本身每天供给搜索的内容，也会经过严格的审核和筛选，可以在Feed（信息流）里分发的，到搜索可能还要再卡一道，其实推出去的量级在内容供给上也会做很多筛选。”阮瑜说。
 而对于低质甚至虚假内容，阮瑜称百家号平台有复审环节控制吸引眼球的内容的分发。在过去一年，百家号开展“净网2018”、“剑网2018”等多个专项行动，打击各类低俗账号和低俗内容。同时出手打击各种“做号者”，关闭数十万的违规账号，建立原创保护机制。
 值得一提的是，沈抖在发言中提到，百度之所以推出百家号和智能小程序，一个不能忽视的背景是，在PC时代，标准浏览器下用户可以无障碍访问任何内容，但到了移动互联网时代，每个App都是独立的个体，相互之间的访问变得更加困难，比较割裂。因此百度提出了百家号、百度智能小程序等行业解决方案扭转局面。
