--- a/source/_posts/特朗普和梅姨缺席，“中国经济”在达沃斯成万众焦点.md
+++ b/source/_posts/特朗普和梅姨缺席，“中国经济”在达沃斯成万众焦点.md
@@ -10,7 +10,9 @@ categories:
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/f8e802cbbd215fda0e94b7b059324eb2.jpg" />
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/ecdbc17cdab6167d1c95148e1872e264.jpg" />
 周艾琳
+<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/fe97d5b385a701fbff9571a62cd5a2f5.jpg" />
 2018年的世界经济论坛（下称“达沃斯论坛”）可谓星光熠熠、热闹非凡，美国总统特朗普初登舞台，大谈其任下所缔造的美股牛市；英国首相特雷莎·梅则当众表达“脱欧”决心；年轻有为的法国总统马克龙则用英法两种语言交替发言，向在座的各国领袖和商界巨头宣示“法国回来了”，并期待推动一种更加符合道义的全球化进程。
+<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/b569d4782402b769e6b0cf2cb0159ff5.jpg" />
 然而到了2019年，这三位“明星”纷纷因“家务事”而缺席达沃斯。
 这无疑也从侧面体现出今年全球经济所面临的挑战，尽管今年的达沃斯小镇并未遭遇往年的暴雪。
 在多场论坛上，各界对于中国话题的关注更胜以往，中国经济增速放缓的溢出效应、金融开放进程等都受到热议。北京时间1月23日晚10时，中国国家副主席王岐山发表演讲；次日北京时间凌晨，第一财经电视论坛专场也聚焦“中国经济展望”。
