--- a/source/_posts/特朗普和梅姨缺席，“中国经济”在达沃斯成万众焦点.md
+++ b/source/_posts/特朗普和梅姨缺席，“中国经济”在达沃斯成万众焦点.md
@@ -15,7 +15,9 @@ categories:
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/b569d4782402b769e6b0cf2cb0159ff5.jpg" />
 然而到了2019年，这三位“明星”纷纷因“家务事”而缺席达沃斯。
 这无疑也从侧面体现出今年全球经济所面临的挑战，尽管今年的达沃斯小镇并未遭遇往年的暴雪。
-在多场论坛上，各界对于中国话题的关注更胜以往，中国经济增速放缓的溢出效应、金融开放进程等都受到热议。北京时间1月23日晚10时，中国国家副主席王岐山发表演讲；次日北京时间凌晨，第一财经电视论坛专场也聚焦“中国经济展望”。
+在多场论坛上，各界对于中国话题的关注更胜以往，中国经济增速放缓的溢出效应、金融开放进程等都受到热议。北京时间1月23日晚10时，中国国家副主席王岐山发表主旨演讲。
+王岐山指出，新技术是机遇也是风险和挑战。我们要以全人类命运与共的视野和远见，共同构建第四次工业革命时代的全球架构。要守住全人类安全的底线，逐步探索建立相关规则和标准，同时为科学发现和技术创新、推广和利用留下广阔空间。平衡照顾各国特别是新兴市场国家和发展中国家的利益，不能仅仅以发达国家、个别国家的安全、标准要求全世界。要尊重各国主权，不搞技术霸权、不干涉他国内政。要坚持多边主义，构建和平安全、民主透明、包容普惠的技术规则体系和国际合作新框架，使全人类都能从技术创新中受益。
+24日凌晨，第一财经电视论坛专场则聚焦“中国经济展望”。
 今年达沃斯论坛于瑞士当地时间1月22日至25日间召开，主题为“全球化4.0：打造第四次工业革命时代的全球结构”。
 论坛正式开幕的前一天，国际货币基金组织（IMF）总裁拉加德举行了新闻发布会，她将全球经济比喻作一名赛道滑雪员——“滑雪最重要的就是可见度、道路畅通，且其他队员都能在自己的赛道中前行。”她接下来还表示，前两年赛道畅通无阻，即全球经济同步扩张，然而如今可见度下降、不确定性上升，全球经济扩张已经面临拐点。
 此次，IMF就下调了全球经济增速预测，至三年来的新低点，分别下调2019年、2020年全球经济增速预期0.2和0.1个百分点至3.5%和3.6%，并称下行风险不断积聚。
@@ -62,7 +64,9 @@ categories:
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/b569d4782402b769e6b0cf2cb0159ff5.jpg" />
 然而到了2019年，这三位“明星”纷纷因“家务事”而缺席达沃斯。
 这无疑也从侧面体现出今年全球经济所面临的挑战，尽管今年的达沃斯小镇并未遭遇往年的暴雪。
-在多场论坛上，各界对于中国话题的关注更胜以往，中国经济增速放缓的溢出效应、金融开放进程等都受到热议。北京时间1月23日晚10时，中国国家副主席王岐山发表演讲；次日北京时间凌晨，第一财经电视论坛专场也聚焦“中国经济展望”。
+在多场论坛上，各界对于中国话题的关注更胜以往，中国经济增速放缓的溢出效应、金融开放进程等都受到热议。北京时间1月23日晚10时，中国国家副主席王岐山发表主旨演讲。
+王岐山指出，新技术是机遇也是风险和挑战。我们要以全人类命运与共的视野和远见，共同构建第四次工业革命时代的全球架构。要守住全人类安全的底线，逐步探索建立相关规则和标准，同时为科学发现和技术创新、推广和利用留下广阔空间。平衡照顾各国特别是新兴市场国家和发展中国家的利益，不能仅仅以发达国家、个别国家的安全、标准要求全世界。要尊重各国主权，不搞技术霸权、不干涉他国内政。要坚持多边主义，构建和平安全、民主透明、包容普惠的技术规则体系和国际合作新框架，使全人类都能从技术创新中受益。
+24日凌晨，第一财经电视论坛专场则聚焦“中国经济展望”。
 今年达沃斯论坛于瑞士当地时间1月22日至25日间召开，主题为“全球化4.0：打造第四次工业革命时代的全球结构”。
 论坛正式开幕的前一天，国际货币基金组织（IMF）总裁拉加德举行了新闻发布会，她将全球经济比喻作一名赛道滑雪员——“滑雪最重要的就是可见度、道路畅通，且其他队员都能在自己的赛道中前行。”她接下来还表示，前两年赛道畅通无阻，即全球经济同步扩张，然而如今可见度下降、不确定性上升，全球经济扩张已经面临拐点。
 此次，IMF就下调了全球经济增速预测，至三年来的新低点，分别下调2019年、2020年全球经济增速预期0.2和0.1个百分点至3.5%和3.6%，并称下行风险不断积聚。
