--- a/source/_posts/科创板方案获批，创新驱动新支撑.md
+++ b/source/_posts/科创板方案获批，创新驱动新支撑.md
@@ -9,26 +9,28 @@ categories:
 <!-- more -->
 杜卿卿
 黄思瑜
-科创板疾行而来。
+科创板正疾行而来。
 1月23日，中央全面深化改革委员会第六次会议召开，审议通过了《在上海证券交易所设立科创板并试点注册制总体实施方案》、《关于在上海证券交易所设立科创板并试点注册制的实施意见》。
 “在上海证券交易所设立科创板并试点注册制，是实施创新驱动发展战略、深化资本市场改革的重要举措。”会议提出，要增强资本市场对科技创新企业的包容性，着力支持关键核心技术创新，提高服务实体经济能力。要稳步试点注册制，统筹推进发行、上市、信息披露、交易、退市等基础制度改革，建立健全以信息披露为中心的股票发行上市制度。
-上海高级金融学院副院长、金融学教授严弘对第一财经记者表示，科创板放到上海，对上海国际金融中心建设会起到很大推动作用。同时，科创板要试点注册制，这是全球国际金融中心的金融市场采用的普遍制度，实施之后，我国金融市场的市场化程度将会有一个标志性的提升，对于提升上海的金融市场地位和全球角色，都会有很强的助推作用。
+上海高级金融学院副院长、金融学教授严弘对第一财经记者表示，科创板于上海设立，对上海国际金融中心建设会起到很大推动作用。同时，科创板要试点注册制，这是全球国际金融中心的金融市场采用的普遍制度。实施之后，我国金融市场的市场化程度将会有标志性的提升，对于提升上海的金融市场地位和全球角色，都会有很强的助推作用。
+上海市金融工作局局长郑杨21日透露，设立科创板及注册制的工作目前进展顺利，近期会对一些规则制度征求意见。
 科创板的提法始于2018年11月5日。当日上午，国家主席习近平在首届中国国际进口博览会开幕式的主旨演讲中提出，将在上海证券交易所（下称“上交所”）设立科创板并试点注册制，支持上海国际金融中心和科技创新中心建设，不断完善资本市场基础制度。
-上述消息宣布后立刻引发市场震动。证监会随后发布答记者问称，证监会党委深刻认识到，在上交所设立科创板是落实创新驱动和科技强国战略、推动高质量发展、支持上海国际金融中心和科技创新中心建设的重大改革举措，是完善资本市场基础制度、激发市场活力和保护投资者合法权益的重要安排。
+上述消息宣布后立刻引发市场重视。证监会随后发布答记者问称，证监会党委深刻认识到，在上交所设立科创板是落实创新驱动和科技强国战略、推动高质量发展、支持上海国际金融中心和科技创新中心建设的重大改革举措，是完善资本市场基础制度、激发市场活力和保护投资者合法权益的重要安排。
 证监会表示，科创板旨在补齐资本市场服务科技创新的短板，是资本市场的增量改革，将在盈利状况、股权结构等方面做出更为妥善的差异化安排，增强对创新企业的包容性和适应性。
-在此后近两个月时间里，证监会、上交所、保荐机构，以及地方政府部门、产业园区，再到一级市场的创投机构、创新企业，都从各自领域展开了星夜兼程的准备工作，设立科创板并试点注册制也成为证券市场的头等大事。
-证监会副主席方星海日前在2019年世界经济论坛年会期间对科创板出台表示了期待，而此前在1月12日，他更是明确表示，对科创板及注册制而言中央经济工作会议提出的关键词是“尽快落地”。
-地方政府方面也在积极备战，一方面组织咨询和培训，另一方面梳理企业库积极向上交所报送。湖北高投引导基金管理有限公司总经理陈丹在接受第一财经记者采访时就透露，他们也在政府引导基金参股子基金投资项目中，梳理科创板后备企业库，希望通过省委省政府等相关渠道，向交易所报送，尽快实现上市。
+在此后近两个月时间中，从证监会、上交所、保荐机构，到地方政府部门、产业园区，再到一级市场的创投机构、创新企业，都从各自领域展开了星夜兼程的准备工作，设立科创板并试点注册制也成为证券市场的头等大事。
+证监会副主席方星海在2019年世界经济论坛年会期间对科创板出台表示了期待，而此前在1月12日，他更是明确表示，中央经济工作会议对科创板及注册制提出的关键词是“尽快落地”。
+地方政府也在积极备战，一方面组织咨询和培训，另一方面梳理企业库积极向上交所报送。湖北高投引导基金管理有限公司总经理陈丹在接受第一财经记者采访时表示，他们也在政府引导基金参股子基金投资项目中梳理科创板后备企业库，希望通过省委省政府等相关渠道，向交易所报送，尽快实现上市。
 而此次实施方案和实施意见的获批，意味着科创板及注册制离落地实施更近了一步。
-目前，证监会系统及上海各单位的准备工作也在加紧推进。上海市金融工作局局长郑杨1月21日透露，设立科创板及注册制的工作目前进展顺利，稳步在推进，近期会对一些规则制度征求意见。从上海层面来说，将主动参与、全力配合证监会和上交所推动科创板落地，形成配套推进的协调机制和工作方案，正在抓紧摸排筛选优质企业，做好试点企业的储备。
+目前，证监会系统及上海各单位的准备工作也在加紧推进。郑杨称，设立科创板及注册制的工作目前进展顺利，稳步在推进，近期会对一些规则制度征求意见。从上海层面来说，将主动参与、全力配合证监会和上交所推动科创板落地，形成配套推进的协调机制和工作方案，正在抓紧摸排筛选优质企业，做好试点企业的储备。
 一是营造良好的配套环境，全力配合做好方案的制定、规则的完善、配套制度的建立、基础系统的开发等工作，积极做好宣传推广、政策解读等配套支持；二是培育筛选企业，已经组织联合调研组，聚焦关键产业领域，加强对重点企业的集中走访，提高上市效率；三是强化地方服务保障，对标科创板企业上市标准和特点，做好企业上市前后的服务保障。
-上海证监局局长严伯进也表示，证监会已经把在上海证券交易所设立科创板并且试点注册制作为系统主要任务，正在集全系统之力，由各个部门共同努力在全力推进。一方面，围绕支持上海国际金融中心建设，证监会将进一步强化工作联系机制，发挥上海金融中心的优势，鼓励本地的证券公司、基金机构等市场主体加强对科创企业的资金投入。另一方面，为科创板上市企业事中、事后监管做好准备，为科创板稳妥起步打好基础。
-“科创板将会带来一系列溢出效应。”严弘对记者称，一方面，因为科创板实行注册制，这是国际成熟金融市场普遍采用的制度，一旦实施，意味着我国金融市场的市场化程度将有标志性提升。另一方面，注册制实施过程中，需要大量金融服务机构，从券商、会计师、律师以及其他信息提供方，在跳出审核体制之后，市场化的金融服务体系将更容易在上海聚集。
-“吸引更多有专业能力的金融服务机构来到上海，使得上海的金融服务体系更加完整。进一步还会有集聚效应，不光是建成科创板，实际上是形成了一个强大的金融服务生态体系。严弘告诉记者：“预计科创板当中不少企业会来自长三角地区，特别是一些有核心技术的新兴科技企业，比如上海张江附近、杭州等地，都会受益于科创板的辐射带动效应。”
-华泰证券研究员曾岩认为，科创板承载着变革A股的历史使命。因为准入、交易等制度的不同，让科创板大概率与现有板块的互补性大于互斥性。随科创板而来的不仅是优质标的，让投资者得以分享时代增长的红利，而且有望引入良性竞争，通过二级市场资金“用脚投票”，倒逼社会资源优化配置。
-而科创板可为实体经济“通渠”，使得支撑经济结构转型升级的科技创新型企业能够在资金的支持下发展壮大，直接融资带来的生产活力，进一步通过盈利与股票市场形成共振。
-“值得注意的是，注册制之下，资本市场以信息披露为核心的制度特点体现就更加充分，对信息披露的及时性完整性都有更加严苛的要求。所以，要对市场做好监管，同时又要放手让市场去发挥定价和评估的功能。”严弘认为，行政手段真正能够解决的，是对违法违规主体进行严格惩戒，真正达到让他们不敢有任何妄想。否则，企业如果认为违法成本过低，就可能出现混乱局面。
-在他看来，监管层面从一开始就制定明晰可行的规则，然后严格执行，在规则引导之下，让市场充分发挥作用。因为，这不仅对科创板很重要，实际上对整个金融市场以及金融服务体系的监管而言，都是非常重要的。
+上海证监局局长严伯进也表示，证监会已经把在上交所设立科创板并且试点注册制作为系统主要任务，正在集全系统之力，由各个部门共同努力全力推进。
+一方面，围绕支持上海国际金融中心建设，证监会将进一步强化工作联系机制，发挥上海金融中心的优势，鼓励本地的证券公司、基金机构等市场主体加强对科创企业的资金投入。另一方面，为科创板上市企业事中、事后监管做好准备，为科创板稳妥起步打好基础。
+“科创板将会带来一系列溢出效应。”严弘对记者称，一方面，因为科创板实行注册制，这是国际成熟金融市场普遍采用的制度，一旦实施，意味着我国金融市场的市场化程度将有标志性提升；另一方面，注册制实施过程中，需要大量金融服务机构，从券商、会计师、律师以及其他信息提供方，在跳出审核体制之后，市场化的金融服务体系将更容易在上海聚集。
+“吸引更多有专业能力的金融服务机构来到上海，使得上海的金融服务体系更加完整。进一步还会有集聚效应，不光是建成科创板，实际上是形成了一个强大的金融服务生态体系。”严弘告诉记者，预计科创板当中不少企业会来自长三角地区，特别是一些有核心技术的新兴科技企业，比如上海张江、杭州等地区，都会受益于科创板的辐射带动效应。
+华泰证券研究员曾岩认为，科创板承载着变革A 股的历史使命。因为准入、交易等制度的不同，让科创板大概率与现有板块的互补性大于互斥性。随科创板而来的，不仅是优质标的，让投资者得以分享时代增长的红利，而且有望引入良性竞争，通过二级市场资金“用脚投票”，倒逼社会资源优化配置。
+而科创板为实体经济“通渠”，使支撑经济结构转型升级的科技创新型企业能够在资金的支持下发展壮大，直接融资带来的生产活力，进一步通过盈利与股票市场形成共振。
+“值得注意的是，注册制之下，资本市场以信息披露为核心的制度特点将更加充分地体现，对信息披露的及时性完整性都有更加严苛的要求。所以，要对市场做好监管，同时又要放手让市场去发挥定价和评估的功能。”严弘认为，行政手段真正能够解决的，是对违法违规主体进行严格惩戒，真正达到让它们不敢有任何妄想。如果企业认为违法成本过低，就可能出现混乱局面。
+在他看来，监管层面从一开始就制定明晰可行的规则，然后严格执行，在规则引导之下，让市场充分发挥作用。这不仅对科创板很重要，对金融市场及金融服务体系的监管也很重要。
  
  
 “全球金融中心指数”从营商环境、金融体系、基础设施、人力资本、城市声誉等5个方面对全球重要金融中心进行评分和排名。在2018年9月的最新排名中，上海升至全球第5位。
