--- a/source/_posts/保险公司治理评估结果出炉：4家优质、1家不合格.md
+++ b/source/_posts/保险公司治理评估结果出炉：4家优质、1家不合格.md
@@ -1,5 +1,5 @@
 ---
-title: 保险公司治理评估结果出炉：3家被重点关注、1家不合格
+title: 保险公司治理评估结果出炉：4家优质、1家不合格
 author: wetech
 date: 2019-01-23 21:21:55
 tags: 
@@ -7,59 +7,12 @@ categories:
 ---
 从严从紧，保险业严监管氛围依旧。1月23日，50家中资保险法人机构公司治理现场评估结果出炉，重点关注保险公司为3家、不合格保险机构为1家，共发现7大问题。
 <!-- more -->
+<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/5dcd90d91623b9c39ab1c26a618cd70f.jpg" />
 杜川
 从严从紧，保险业严监管氛围依旧。1月23日，50家中资保险法人机构公司治理现场评估结果出炉，重点关注保险公司为3家、不合格保险机构为1家，共发现7大问题。
 为进一步加强保险法人机构公司治理监管，提升保险机构公司治理有效性，2018年，银保监会组织抽取50家中资保险法人机构开展了公司治理现场评估工作。其中：保险集团公司1家、财产险及再保险公司28家、人身险公司20家、保险资产管理公司1家。
 据此前发布的《保险法人机构公司治理评价办法（试行）》规定，评级结果划分标准为：综合评分大于等于90、小于100为优质；综合评分大于等于70、小于90分为合格；综合评分大于等于60分、小于70分为重点关注；综合评分小于60分的保险法人机构定级为不合格。
-记者梳理此次评分来看，优质的共4家保险公司，分别为建信产险（90.95）、海峡金桥（90）、阳光人寿（91.1）、国华人寿（90.15）：重点关注有3家，分别为燕赵财险（69.4）、弘康人寿（69.15）、前海人寿（68）；不合规的保险机构为都邦产险（39.75）。
-机构类型
-公司名称
-监管评分
-自评分
-综合得分
-等级划分
-财产险公司
-建信产险
-86.25
-98
-90.95
-优质
-海峡金桥
-84
-99
-90
-优质
-燕赵财险
-60
-96
-69.4
-重点关注
-都邦产险
-66.25
-0
-39.75
-不合格
-人身险公司
-阳光人寿
-88.5
-95
-91.1
-优质
-国华人寿
-84.25
-99
-90.15
-优质
-弘康人寿
-66.25
-86
-69.15
-重点关注
-前海人寿
-63
-88
-68
-重点关注
+记者梳理此次评分来看，优质的共4家保险公司，分别为建信产险（90.95）、海峡金桥（90）、阳光人寿（91.1）、国华人寿（90.15）；不合格的保险机构为都邦产险（39.75）。
 此外，此次评估共发现7方面问题，具体包括股东股权行为不合规、“三会一层”（股东大会、董事会、监事会和高级管理层）运作不规范、关联交易管理不严格、内部审计不达标、薪酬管理制度不完善、信息披露不充分、自我评价不客观。
 例如，股东股权行为不合规主要表现为：股东股权关系复杂；股权代持、隐形股东等问题仍然存在；股东争夺控制权、不当行使股东权利；股权质押、冻结比例过高；股权管理不规范等。关联交易管理不严格主要表现为：关联交易制度有名无实，只有规定并未落实；未按照“实质重于形式”原则，对关联方和关联交易进行准确识别与及时更新；关联交易结构不合规，导致保险公司利益受损；资金运用类关联交易风控不足，未按照“层层穿透”原则对底层基础资产进行严格审核；未严格按要求对关联交易进行报告和披露。
 值得注意的是，被评机构普遍存在自我评价不客观现象。在50家机构中，自评分与监管评分相差比例在25%以上的有13家。都邦产险因未按要求报送公司治理报告及自评表，自评分为零分，被银保监会点名。
