--- a/source/_posts/在达沃斯，施瓦布替全球问了王岐山5个问题.md
+++ b/source/_posts/在达沃斯，施瓦布替全球问了王岐山5个问题.md
@@ -1,5 +1,5 @@
 ---
-title: 达沃斯|施瓦布替全球问了王岐山5个问题：中国增速、全球化、全球经济、中美关系、工业4.0
+title: 在达沃斯，施瓦布替全球问了王岐山5个问题
 author: wetech
 date: 2019-01-24 00:03:53
 tags: 
@@ -34,7 +34,6 @@ categories:
 “如果偷了东西，60%的小偷都能被抓获，小偷就能少很多，当然没有小偷是不可能的，这就是理想和理想化的区别，这就是监管和市场的区别，这就是标准和创新的区别。”王岐山称。
  
  
-全球最大对冲基金桥水创始人达利欧（Ray Dalio）在达沃斯论坛期间提及，美国、欧洲、中国等经济未来都会持续放缓，货币政策和财政政策应该更加宽松。
+在聚焦全球经济放缓以及未来政策应对的同时，参与讨论的嘉宾和与会者高度关注中国经济形势。中国的金融开放进程也引起海外市场的极大兴趣。
 达沃斯世界经济论坛2019年年会将以全球化4.0为主题，从中可以看到的是，一种新的全球化正在发生。
-王岐山表示，中国改革的脚步不会停滞，开放的大门只会越开越大。
 王岐山副主席出席达沃斯世界经济论坛2019年年会期间，将应邀在论坛年会上发表致辞，会见论坛执行主席施瓦布先生，并同与会各界人士进行交流。
