--- a/source/_posts/盘前必读丨科创板及试点注册制总体方案、19年财政政策、海南赛马.md
+++ b/source/_posts/盘前必读丨科创板及试点注册制总体方案、19年财政政策、海南赛马.md
@@ -5,26 +5,27 @@ date: 2019-01-24 07:48:07
 tags: 
 categories: 
 ---
-17:00 欧元区1月Markit制造业PMI初值
+周四亚洲股市开市，日经225指数开盘下跌95.22点，跌幅0.46%，报20593.72点。
 <!-- more -->
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/5795dce2c13c12cd19ef68151420a6d2.jpg" />
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/8efe390e0b194d28d84126225ae4c3db.jpg" />
 当地时间周三，蓝筹股财报强劲，美股震荡收高。道指涨逾170点，涨幅0.70%，报24575.62点。道指成份股联合技术（UTX）、宝洁（PG）及IBM等领涨大盘。IBM收涨逾8%，宝洁收涨近5%，因财报好于预期。中概股多数收涨，百度涨1.79%，绿能宝涨194.36%。欧洲股市全线收跌。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/1115fd943822077aad8679290e0a4854.jpg" />
-17:00 欧元区1月Markit制造业PMI初值
+周四亚洲股市开市，日经225指数开盘下跌95.22点，跌幅0.46%，报20593.72点。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/c006de579c985b965bc50aee9526f6f6.jpg" />
-20:45 欧元区欧洲央行存款便利利率
+17:00 欧元区1月Markit制造业PMI初值
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/acf783bf7c84fbd1dd67150d0609477d.jpg" />
-21:30 美国12月核心零售销售环比
+20:45 欧元区欧洲央行存款便利利率
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/9d8e2d90a2b37391ca779f15a10018b0.jpg" />
-21:30 美国11月贸易账
+21:30 美国12月核心零售销售环比
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/3fe87f78bb215979ccf7a8b1a382813c.jpg" />
-无
+21:30 美国11月贸易账
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/10271f820278a7057d79730f65d39711.jpg" />
 无
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/4215e19b02831b6bbc4c204f5d43fd19.jpg" />
 无
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2018/11/781b132626e7c57022d1491e8f3a175c.jpg" />
+无
 习近平主持召开中央全面深化改革委员会第六次会议强调：对标重要领域和关键环节改革，继续啃硬骨头，确保干一件成一件。会议审议通过了《在上海证券交易所设立科创板并试点注册制总体实施方案》、《关于在上海证券交易所设立科创板并试点注册制的实施意见》。
 1月23日，在2019年世界经济论坛年会“全球秩序衰退背景下的反思”分论坛上，中国证监会副主席方星海表示，中国推进对外开放是毫无疑问的。方星海表示，中国此前在对外开放方面的承诺正在顺利实现中。金融业已经有一系列开放措施，到2021年外资银行可在中国实现100%持股。去年我国还宣布放宽汽车行业的外资股比限制。
 据大连商品交易所官方消息，近期，中国证监会正式批复大商所为“合格中央对手方”（Qualifying CCP，简称为QCCP）。大商所相关负责人表示，相比普通的CCP，QCCP在对手方交易风险敞口权重等国际监管要求上更加优惠，有利于吸引更多境外投资机构和投资者参与国内期货市场交易,提升交易所的国际影响力。
