--- a/source/_posts/科创板方案获批，创新驱动新支撑.md
+++ b/source/_posts/科创板方案获批，创新驱动新支撑.md
@@ -17,7 +17,7 @@ categories:
 科创板的提法始于2018年11月5日。当日上午，国家主席习近平在首届中国国际进口博览会开幕式的主旨演讲中提出，将在上海证券交易所（下称“上交所”）设立科创板并试点注册制，支持上海国际金融中心和科技创新中心建设，不断完善资本市场基础制度。
 上述消息宣布后立刻引发市场重视。证监会随后发布答记者问称，证监会党委深刻认识到，在上交所设立科创板是落实创新驱动和科技强国战略、推动高质量发展、支持上海国际金融中心和科技创新中心建设的重大改革举措，是完善资本市场基础制度、激发市场活力和保护投资者合法权益的重要安排。
 证监会表示，科创板旨在补齐资本市场服务科技创新的短板，是资本市场的增量改革，将在盈利状况、股权结构等方面做出更为妥善的差异化安排，增强对创新企业的包容性和适应性。
-在此后近两个月时间中，从证监会、上交所、保荐机构，到地方政府部门、产业园区，再到一级市场的创投机构、创新企业，都从各自领域展开了星夜兼程的准备工作，设立科创板并试点注册制也成为证券市场的头等大事。
+在此后两个多月时间中，从证监会、上交所、保荐机构，到地方政府部门、产业园区，再到一级市场的创投机构、创新企业，都从各自领域展开了星夜兼程的准备工作，设立科创板并试点注册制也成为证券市场的头等大事。
 证监会副主席方星海在2019年世界经济论坛年会期间对科创板出台表示了期待，而此前在1月12日，他更是明确表示，中央经济工作会议对科创板及注册制提出的关键词是“尽快落地”。
 地方政府也在积极备战，一方面组织咨询和培训，另一方面梳理企业库积极向上交所报送。湖北高投引导基金管理有限公司总经理陈丹在接受第一财经记者采访时表示，他们也在政府引导基金参股子基金投资项目中梳理科创板后备企业库，希望通过省委省政府等相关渠道，向交易所报送，尽快实现上市。
 而此次实施方案和实施意见的获批，意味着科创板及注册制离落地实施更近了一步。
