--- a/source/_posts/市场机会｜5G商用进一步推进，产业链上企业受益.md
+++ b/source/_posts/市场机会｜5G商用进一步推进，产业链上企业受益.md
@@ -10,7 +10,7 @@ categories:
 据工业和信息化部消息，2019年1月23日，IMT-2020（5G）推进组在北京召开5G技术研发试验第三阶段总结暨第二届“绽放杯”5G应用征集大赛启动会。在本次大会上，IMT-2020（5G）推进组发布了5G技术研发试验第三阶段测试结果。测试结果表明，5G基站与核心网设备均可支持非独立组网和独立组网模式，主要功能符合预期，达到预商用水平。
 5G商用部署正在加快推进，三大运营商获得5G试验频谱分配，中央经济工作会议重点强调加快5G商用，主要运营商预计2019年上半年发布5G手机。同时，工信部表示，2019年国家将在若干个城市发放5G临时牌照，并加快推进5G终端的应用。
 总体来看，2018年5G进入技术测试和标准制定高峰，催化剂频现，我国5G整体推进进度符合预期，2020年成功实现商用为大概率事件，5G作为确定性较高的投资性事件值得持续关注。
-在技术与政策的推动下5G产业链上的企业将全面收益，A股市场上相关上市公司中中兴通讯（000063.SZ）、光迅科技（002281）、烽火通信（600498.SH）以及中天科技（600522.SH）等值得关注。
+在技术与政策的推动下5G产业链上的企业将全面收益，A股市场上相关上市公司中中兴通讯（000063.SZ）、光迅科技（002281.SZ）、烽火通信（600498.SH）以及中天科技（600522.SH）等值得关注。
  
  
 华为率先完成中国5G技术研发试验2.6GHz频段测试
