--- a/source/_posts/在达沃斯，施瓦布替全球问了王岐山5个问题.md
+++ b/source/_posts/在达沃斯，施瓦布替全球问了王岐山5个问题.md
@@ -20,7 +20,7 @@ categories:
 今年达沃斯论坛开幕前，国际货币基金组织（IMF）下调了全球经济增速预测，分别下调2019年、2020年全球经济增速预期0.2个和0.1个百分点至3.5%和3.6%，并称下行风险不断积聚。为此，施瓦布向王岐山发问称“你认为是否已经做好了充分准备？”
 王岐山回答称：“是福是祸躲不过，真发生危机又怎么样呢？另外，是不是这个周期就到顶了？我看仁者见仁、智者见智。”
 他也表示：“例如也有观点认为，中国经济的发展已经到头，但在中国看来，我们不仅没到头，我们还可持续。所以仁者见仁，智者见智。”他强调，“做好自己的事情，中国发展好了，（鉴于）中国和世界经济的交融性、互补性，（发展）本身就是对全人类和全世界的贡献。”
-王岐山也提及，为何2008年的金融危机这么快就过去了，而非像上世纪末那样出现大萧条？“我认为是因为新兴市场经济体国家进入了全球化，才把华尔街的金融危机在很短的时间内度过去了。”
+王岐山也提及，为何2008年的金融危机这么快就过去了，而非像上世纪二十年代末那样出现大萧条？“我认为是因为新兴市场经济体国家进入了全球化，才把华尔街的金融危机在很短的时间内度过去了。”
 也有观点认为，病是美国得的，怎么中国用药比美国更猛？王岐山解释称：“2008年后中国政府采取的态度措施，反映了中国是负责任的，当时我们所采取的政策措施，帮助全球快速度过了危机，这就是新兴经济体国家的贡献，总体我对经济前景是乐观的。”
 王岐山表示，他首先并不认同全球经济未来一定有危机，“但在这个不确定的世界里，（全球经济）真发生危机，我认为就好像感冒发烧，最后考验的是全人类的智慧和辛劳。从历史哲学文化来思考，全人类不会为一次危机所难倒，发烧反而正是考验免疫力的时机。”他称。
 而对于中国经济，王岐山坦言自己是个乐观派。
@@ -34,6 +34,8 @@ categories:
 “如果偷了东西，60%的小偷都能被抓获，小偷就能少很多，当然没有小偷是不可能的，这就是理想和理想化的区别，这就是监管和市场的区别，这就是标准和创新的区别。”王岐山称。
  
  
-在聚焦全球经济放缓以及未来政策应对的同时，参与讨论的嘉宾和与会者高度关注中国经济形势。中国的金融开放进程也引起海外市场的极大兴趣。
-达沃斯世界经济论坛2019年年会将以全球化4.0为主题，从中可以看到的是，一种新的全球化正在发生。
-王岐山副主席出席达沃斯世界经济论坛2019年年会期间，将应邀在论坛年会上发表致辞，会见论坛执行主席施瓦布先生，并同与会各界人士进行交流。
+“昨天今天明天紧密相连，要了解中国的现实，就要了解中国的历史，才能预见中国的未来。”
+“中国希望在谋求本国发展同时携手各国共同发展，与国际社会携手构建人类命运共同体。”
+王岐山在瑞士出席达沃斯世界经济论坛年会时指出，解决经济全球化过程中出现的问题必须对症下药。发展的不平衡要靠发展来解决。
+各界对于中国话题的关注更胜以往，中国经济增速放缓的溢出效应、金融开放进程等都受到热议。
+各界对于中国话题的关注更胜以往，中国经济增速放缓的溢出效应、金融开放进程等都受到热议。
