--- a/source/_posts/工商银行董事长易会满职务将有变动？工行回应称目前没有要发布的信息.md
+++ b/source/_posts/工商银行董事长易会满职务将有变动？工行回应称目前没有要发布的信息.md
@@ -13,7 +13,7 @@ categories:
 非名校毕业，从基层干起，深耕工行30余载，一步一个脚印稳扎稳打，易会满一直做到工行董事长的职位。
 1984年,易会满从国家级重点中专浙江银行学校(现已升格为浙江金融职业学院)城市金融专业毕业,进入中国人民银行杭州市分行,担任计划处计划员。但随后伴随着中国银行业专业化改革，易会满几乎与工行改制同一时间来到工行，可以算是“开山鼻祖”的老员工。
 1985年，易会满从杭州市分行计划处副处长做起，从最基层一路经历了计划处处长，二级分行副行长、行长，一级分行副行长、行长。2016年5月，一代银行家姜建清谢幕“宇宙行”，在工行体系内部已经锤炼31年的工行原行长易会满接任工行董事长一职，成为工行新的掌舵人。
-从过往经验看，国有四大行的董事长人选一般都是由央行或其他副部及单位领导接替。例如，2016年原银监会副主席周慕冰接棒农行董事长职务。2017年，原中国银行董事长田国立平调至建设银行董事长。这样的例子屡见不鲜。与之相比，从行长职务顺利升任大行董事长的则相对少见，能力可见一斑。
+从过往经验看，国有四大行的董事长人选一般都是由央行或其它副部级单位领导接替。例如，2016年原银监会副主席周慕冰接棒农行董事长职务。2017年，原中国银行董事长田国立平调至建设银行董事长。这样的例子屡见不鲜。与之相比，从行长职务顺利升任大行董事长的则相对少见，能力可见一斑。
 一位接近易会满的人士向第一财经记者表示，祖籍温州的易会满业务能力强，市场经验极其丰富，学习能力也很强。
 两年来，在易会满掌舵下的工行，资产规模已经突破20万亿，2018年利润继续保持高速增长，资产质量逐步改善。
 2018年三季度财报显示，截至报告期末，工行实现净利润2,401.20亿元，同比增长4.82%。年化平均总资产回报率为1.18%，年化加权平均权益回报率为15.15%；实现营业收入5,770.55亿元，同比增长7.71%；利息净收入4,236.30亿元，同比增长10.28%。并获得第一财经2018年度金融价值榜“年度银行”称号。
