--- a/source/_posts/A股复盘9张图丨科创板渐行渐近，芯片、券商股领涨.md
+++ b/source/_posts/A股复盘9张图丨科创板渐行渐近，芯片、券商股领涨.md
@@ -19,14 +19,19 @@ categories:
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/dae8bc536423eb3d6ea819f16c1a408d.jpg" />
 消息面上，1月23日，中央全面深化改革委员会第六次会议审议通过了《在上海证券交易所设立科创板并试点注册制总体实施方案》、《关于在上海证券交易所设立科创板并试点注册制的实施意见》。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/8d28c1fdf70325a45c42f81d6479b7a5.jpg" />
-1.1月22日，国务院国资委与世界经济论坛在瑞士达沃斯联合举办了中外企业交流会，国资委主任肖亚庆表示，2019年国资委将重点抓好确保中央企业经济平稳运行、推动中央企业持续深化改革、不断完善国有资产监管、鼓励中央企业高质量对外开放合作等四个方面工作，鼓励外国企业和民营企业积极参与国资国企改革，实现互利共赢、融合发展。
+盘后数据显示，1月24日龙虎榜中，共10只个股出现了机构的身影，有4只股票呈现机构净买入，6只个股呈现机构净卖出。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/868ff3e93cdc1a97eeb0e104669c8eec.jpg" />
-2.1月24日消息，财政部发布《关于继续实行农产品批发市场、农贸市场房产税、城镇土地使用税优惠政策的通知》，自2019年1月1日至2021年12月31日，对农产品批发市场、农贸市场（包括自有和承租）专门用于经营农产品的房产、土地，暂免征收房产税和城镇土地使用税。对同时经营其他产品的农产品批发市场和农贸市场使用的房产、土地，按其他产品与农产品交易场地面积的比例确定征免房产税和城镇土地使用税。
+当天机构净买入前三的股票分别是阳光电源、上实发展、华英农业，净买入金额分别为1.13亿元、4221万元、2141万元。
+<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/10d09f5088775a4527d7124317359f4a.jpg" />
+当天机构净卖出前三的股票分别是深信服、康力电梯、博世科，净流出金额分别是5361万元、2480万元、1823万元。
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/882a771e6d3ddade632cfaa68eff174c.jpg" />
-3.1月24日消息，人社部召开2018年第四季度新闻发布会。据人社部新闻发言人卢爱红介绍，2018年委托投资的省份和基金委托规模都进一步扩大，截至2018年底，累计已有17个省区市委托投资基本养老保险基金8580亿元，已经到账的资金达到6050亿元，在这17个省区市里面，有9个启动了城乡居民基本养老保险基金的委托投资，合同金额是773亿元。下一步，人社部将继续积极稳妥地推进基金投资运营工作，同时加强监管，推动实现保值增值。
+详见下表：
 <img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/4747f3ce0b0d8342dd5c2c7e7ca361a5.jpg" />
+1.1月22日，国务院国资委与世界经济论坛在瑞士达沃斯联合举办了中外企业交流会，国资委主任肖亚庆表示，2019年国资委将重点抓好确保中央企业经济平稳运行、推动中央企业持续深化改革、不断完善国有资产监管、鼓励中央企业高质量对外开放合作等四个方面工作，鼓励外国企业和民营企业积极参与国资国企改革，实现互利共赢、融合发展。
+<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/5ff94c6e520599b6ef673074fa034ef2.jpg" />
+2.1月24日消息，财政部发布《关于继续实行农产品批发市场、农贸市场房产税、城镇土地使用税优惠政策的通知》，自2019年1月1日至2021年12月31日，对农产品批发市场、农贸市场（包括自有和承租）专门用于经营农产品的房产、土地，暂免征收房产税和城镇土地使用税。对同时经营其他产品的农产品批发市场和农贸市场使用的房产、土地，按其他产品与农产品交易场地面积的比例确定征免房产税和城镇土地使用税。
+3.1月24日消息，人社部召开2018年第四季度新闻发布会。据人社部新闻发言人卢爱红介绍，2018年委托投资的省份和基金委托规模都进一步扩大，截至2018年底，累计已有17个省区市委托投资基本养老保险基金8580亿元，已经到账的资金达到6050亿元，在这17个省区市里面，有9个启动了城乡居民基本养老保险基金的委托投资，合同金额是773亿元。下一步，人社部将继续积极稳妥地推进基金投资运营工作，同时加强监管，推动实现保值增值。
 4.1月24日，交通部新闻发言人吴春耕指出，2019年，交通运输部将从五个方面大力推进京津冀暨雄安新区交通建设，包括加快京雄城际铁路、津石高速公路等雄安新区对外骨干通道项目建设，加快京沈高铁、大张高铁、京秦高速公路等项目建设等。
-<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/fb9503cbc093209fe2c85c0523876d78.jpg" />
 近期，春节行情已经提前演绎，伴随政策预期升温以及风险偏好的转暖，二月望成为全年极佳做多窗口。建议关注龙头券商的投资机会。
 从估值角度来看，对比近5次市场底部，当前经历反弹后A股估值仍然处在底部区域。行业中，推荐受益宏观预期改善的银行、保险、有色、煤炭的估值修复机会。
  
