--- a/source/_posts/让达沃斯富豪集体慌了神，这位29岁美国网红女议员说了什么.md
+++ b/source/_posts/让达沃斯富豪集体慌了神，这位29岁美国网红女议员说了什么.md
@@ -7,6 +7,7 @@ categories:
 ---
 当戴尔公司创始人迈克尔-戴尔（Michael Dell）周三（23日）在世界经济论坛年会（又称“达沃斯论坛”）上被问到，他是否会支持美国纽约州民主党众议员寇蒂兹（Alexandria Ocasio-Cortez）提出的“应该对年收入1000万美元以上的富人征收70%税率”的提议时，戴尔还没做出回答，台下来自科技界的精英们就已爆发出一阵笑声。
 <!-- more -->
+<img align="center" border="0" src="https://imgcdn.yicai.com/uppics/images/2019/01/086c427a0046c03f3776214b2a491a0d.jpg" />
 孙卓
 当戴尔公司创始人迈克尔-戴尔（Michael Dell）周三（23日）在世界经济论坛年会（又称“达沃斯论坛”）上被问到，他是否会支持美国纽约州民主党众议员寇蒂兹（Alexandria Ocasio-Cortez）提出的“应该对年收入1000万美元以上的富人征收70%税率”的提议时，戴尔还没做出回答，台下来自科技界的精英们就已爆发出一阵笑声。
 戴尔回答说，他“更倾向于通过自己的基金会分配大量资源，而不是把钱交给政府”。他还表示，“不，我并不支持这项提议，我也不认为这会对美国经济有所帮助。”
@@ -29,5 +30,4 @@ categories:
 星巴克的前首席执行官舒尔茨正在思考以独立参选人身份参选。
 达沃斯论坛“A级名单”上最富有的12位富豪的财富总额在过去10年中飙升了1750亿美元。
 在聚焦全球经济放缓以及未来政策应对的同时，参与讨论的嘉宾和与会者高度关注中国经济形势。中国的金融开放进程也引起海外市场的极大兴趣。
-该议案要求给予美国总统更多的权力，无需经过美国国会批准也能对其他国家加征关税。
 第四次工业革命的推动力已经促成崭新的经济与全球化形式，而现有的全球治理模式能跟上这样的转变吗？如必须改变，又如何做出抉择？
