--- a/source/_posts/白宫停摆要打“持久战”，80万联邦雇员真要连续四个月拿不到薪水？.md
+++ b/source/_posts/白宫停摆要打“持久战”，80万联邦雇员真要连续四个月拿不到薪水？.md
@@ -28,7 +28,7 @@ categories:
 根据密歇根大学的经济学家迈克尔·格尔曼（Michael Gelman）所作的研究显示，许多被休假的联邦政府员工别无选择，只能推迟偿付抵押贷款和信用卡账单。
 这项研究调查了2013年政府停摆时期对于7000名联邦雇员的影响。研究人员发现，平均而言，联邦雇员只有足够的现金或其他流动资产来支付8天的家庭日常支出，而处于底层的三分之一的人群，在付薪日的前一天，账户里的余额已经归零了。
 而当前的形势更糟糕，2013年的停摆仅仅持续了两周，目前部分联邦雇员已经有整整一个月没有拿到任何薪水了。雪上加霜的是，那些没钱付信用卡的雇员还将背负滞纳金和违约的惩罚。
-政府停摆也促使数千名联邦雇员及其家庭申请失业和食品券。根据美国劳工部的数据，在1月5日结束的一周内，寻求失业救济金的联邦雇员数量从每周不到1000人猛到超过1万人。
+政府停摆也促使数千名联邦雇员及其家庭申请失业和食品券。根据美国劳工部的数据，在1月5日结束的一周内，寻求失业救济金的联邦雇员数量从每周不到1000人猛增到超过1万人。
 一些机构已经决定出手帮助这些处于窘境的公务员。从大银行到地方性信用机构以及电力和电信公司正推出一系列应对政府停摆的全国计划，为联邦雇员提供宽限，免收滞纳金，并为受影响的雇员提供短期无息贷款，帮助他们度过难关。
  
  
