--- a/source/_posts/晚间公告丨干货！今日晚间重要公告速读（更新中）.md
+++ b/source/_posts/晚间公告丨干货！今日晚间重要公告速读（更新中）.md
@@ -23,10 +23,12 @@ categories:
 锦州港公告，预计2018年的净利润同比增加55%-75%。公司上年同期盈利1.43亿元。绩预增主要是由于出售15万吨级外航道工程资产、收到境外股权资产事项导致，影响非经营性损益金额约1.58亿元。
 佳发教育披露2018年度业绩预告，预盈1.15亿元至1.25亿元，同比增长57.23%-70.9%。国家教育考试信息化建设市场需求量增加及新高考改革逐步实施带动公司智慧教育产品销售，公司标准化考点业务和智慧教育业务收入增加。
 新城控股公告，预计公司2018年度实现归属于上市公司股东的净利润为90亿元到105亿元，同比增加49%到74%。
+国祯环保披露2018年度业绩预告。公司预计2018年盈利27,184.48万元-33,009.73万元，同比增长40%-70%。
 京能电力公告，预计2018年的净利润同比增加65%左右。公司上年同期盈利5.34亿元。报告期内，公司整体发电量、利用小时同比增加；公司所属部分燃煤电厂上网电价同比提高，影响公司整体盈利能力有所增强。
 寒锐钴业披露2018年度业绩预告，预盈7.01亿元至7.5亿元，同比增长56%—67%。随着新能源电池产业发展旺盛，特别是三元锂电池市场需求量加大，公司钴产品销售量、价齐升，成为公司盈利的主要动力。
 冀东装备披露2018年度业绩预告，预盈2150万-2600万元，同比增长38.34%-67.29%。报告期内，公司业务量增加，营业收入同比增长，同时受产品结构影响，毛利率同比降低。
 包钢股份公告，预计2018年的净利润为29.98亿元左右，同比增加45.46%左右。
+鲁银投资公告，预计2018年的净利润为6000万元到7000万元，同比扭亏为盈。公司上年同期亏损1.37亿元。
 *ST金岭披露2018年度业绩预告，预盈9400万元至1.21亿元，同比扭亏为盈。公司主要产品铁精粉销售量略有提高，主营业务利润同比有所增长。
 国际实业披露2018年度业绩预告，预盈5200万元—7600万元，同比扭亏。报告期业绩较上年同期增长的主要原因为报告期营业收入增加及资产处置收益增加所致。
 新智认知公告，公司拟回购部分公司股份，回购资金总额不低于1亿元且不超过2亿元，回购价格不超过23元/股。
@@ -43,6 +45,7 @@ ST康得新公告，公司1月16日收到深交所《问询函》后，立即会
 诺力股份公告，公司控股子公司中鼎集成与孚能科技签订了日常经营性合同，合同内容为提供动力锂电池生产智能化物流成套系统两套，合同总金额为6亿元。上述合同的签订进一步巩固公司仓储物流系统集成业务在新能源领域的领先地位。
 天山生物公告，因公司涉嫌信息披露违法违规，证监会决定对公司进行立案调查。
 科华生物公告，控股企业苏州天隆生物科技有限公司收到国家药品监督管理局颁发的一项体外诊断试剂《医疗器械注册证》。产品名称为“甲型/乙型流感病毒RNA检测试剂盒（荧光PCR法）”。以上新产品医疗器械注册证的取得，提升公司在传染病防控领域的竞争优势，有利于流感疫情防控。
+ST升达公告，因公司涉嫌信息披露违法违规，中国证监会决定对公司立案调查。
  
  
 1月23日晚间，沪深两市多家上市公司发布公告，以下是重要公告摘要，供投资者参考。
