--- a/source/_posts/雄安新区：个人产权住房以共有产权房为主.md
+++ b/source/_posts/雄安新区：个人产权住房以共有产权房为主.md
@@ -10,8 +10,4 @@ categories:
 24日对外发布的《中共中央 国务院关于支持河北雄安新区全面深化改革和扩大开放的指导意见》指出，坚持房子是用来住的、不是用来炒的定位，落实职住平衡要求，推动雄安新区居民实现住有所居。针对多层次住房需求建立多主体供应、多渠道保障、租购并举的住房制度，个人产权住房以共有产权房为主。严禁大规模开发商业房地产，严控周边房价，严加防范炒地炒房投机行为。
  
  
-雄安新区设立近两年来，大的顶层设计已经基本完成，“1+N”规划体系基本建立，“1+N”政策体系初步形成，雄安新区规划建设四梁八柱基本完成。
-雄安板块盘中直线拉升，截至发稿，东方能源涨停，建投能源、韩建河山、冀东装备、保变电气、嘉寓股份、四通新材等个股上涨明显。
-日前，经党中央、国务院同意，国务院正式批复《河北雄安新区总体规划（2018—2035年）》。
-北京已经推进在集体土地上建设租赁住房，但按照规定，这些房子只租不售。这次集体土地上建设的共有产权房则是将对外出售。
-雄安新区六工程项目招标，包括雄县新托管三乡镇坑塘及隔碱沟等重点支干渠治理环境调查等
+坚持把创新作为引领雄安新区高质量发展的第一动力，以供给侧结构性改革为主线，系统推进有利于承接北京非首都功能、集聚创新要素资源的体制机制改革。
