--- a/source/_posts/晚间公告丨干货！今日晚间重要公告速读（更新中）.md
+++ b/source/_posts/晚间公告丨干货！今日晚间重要公告速读（更新中）.md
@@ -48,6 +48,7 @@ categories:
 鹏鹞环保股东CIENA ENTERPRISES LIMITED拟以协议转让的方式向储辉、周峰转让其持有的公司无限售流通股4800万股，占公司总股本的10%，转让价格为9.06元/股，转让总价款4.3488亿元。转让完成后，CIENA ENTERPRISES LIMITED尚持有公司9.47%股份，储辉、周峰将各自分别持有公司5%股份。
 透景生命公告，持有公司7.53%股份的张江创投，计划减持不超过公司总股本3%的股权。
 麦迪科技公告，持股5.08%的股东WI Harper计划3个交易日后的6个月内，减持不超过409.8万股，即不超过公司总股本的5.08%。此外，公司董事兼总经理汪建华拟减持不超过129.15万股，不超过公司总股本的1.60%。
+长城动漫公告称，公司近日通过中国证券登记结算有限责任公司深圳分公司系统查询，获悉公司控股股东长城影视文化企业集团有限公司（下称：长城集团）持有的公司股份被轮候冻结，本次新增轮候冻结数量为6861.97万股。公司控股股东长城集团持有公司股份总数为 6861.97万股，占公司总股本比例为21%。长城集团累计质押的股份数量为6815.93万股，占其持股总数的比例为99.33%，占公司总股本比例为20.86%。长城集团累计被冻结的股份数量为6861.97万股。
 ST慧球公告，控股股东瑞莱嘉誉此前与天下秀签订了股份转让协议，将持有的11.66%公司股份转让给天下秀。协议转让股份已于1月24日完成了过户登记手续。公司控股股东变更为天下秀，实际控制人变更为新浪集团和李檬。
 中央商场公告称，公司、控股股东及实际控制人不存在应披露而未披露的重大事项。公司实际控制人祝义财目前刚刚返回家中，尚未正式开始工作。祝义财目前未在公司担任职务，未参与公司经营。
 兰州民百公告，由于文件准备原因，相关内容尚需完善，导致定期报告不能按预约时间披露。经向上交所申请，公司2018年年度报告披露时间延期至2019 年1月31日。根据原先的预披露时间表，兰州民百1月25日将披露沪市首份2018年年报。
